PullRequest: 180 refactor bitset
Merge branch 'import_roaringbitmap of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/180


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* refactor bitset
* update
* update
* update
* update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ include (extern/cpuinfo/cpuinfo.cmake)
 include (extern/fmt/fmt.cmake)
 include (extern/hdf5/hdf5.cmake)
 include (extern/thread_pool/thread_pool.cmake)
+include (extern/roaringbitmap/roaringbitmap.cmake)
 
 include_directories (extern/hnswlib)
 include_directories (${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
