PullRequest: 193 fix compile issue for roaringbitmap
Merge branch 'fix-compile-issue of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/193


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 祥予 <wxy407827@antgroup.com>


* fix compile issue for roaringbitmap
* modify

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,5 +17,5 @@ add_library (vsag_static STATIC ${VSAG_SRCS})
 set (VSAG_DEP_LIBS diskann pthread m dl simd fmt::fmt-header-only nlohmann_json::nlohmann_json roaring)
 target_link_libraries (vsag ${VSAG_DEP_LIBS})
 target_link_libraries (vsag_static ${VSAG_DEP_LIBS})
-add_dependencies (vsag spdlog roaringbitmap)
-add_dependencies (vsag_static spdlog roaringbitmap)
+add_dependencies (vsag spdlog roaring)
+add_dependencies (vsag_static spdlog roaring)
