PullRequest: 190 refactor dataset
Merge branch 'refactor_dataset of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/190


Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* refactor dataset
* update
* update

--- a/mockimpl/CMakeLists.txt
+++ b/mockimpl/CMakeLists.txt
@@ -1,6 +1,6 @@
 
-add_library (vsag_mockimpl SHARED vsag/simpleflat.cpp vsag/factory.cpp ../src/bitset_impl.cpp)
-add_library (vsag_mockimpl_static STATIC vsag/simpleflat.cpp vsag/factory.cpp ../src/bitset_impl.cpp)
+add_library (vsag_mockimpl SHARED vsag/simpleflat.cpp vsag/factory.cpp ../src/bitset_impl.cpp ../src/dataset_impl.cpp)
+add_library (vsag_mockimpl_static STATIC vsag/simpleflat.cpp vsag/factory.cpp ../src/bitset_impl.cpp ../src/dataset_impl.cpp)
 target_link_libraries (vsag_mockimpl roaring)
 target_link_libraries (vsag_mockimpl_static roaring)
 add_dependencies (vsag_mockimpl version_mockimpl roaring)
